Hover bilan o'ng tomonni to'g'irlab chiqdim

--- a/index.html
+++ b/index.html
@@ -274,121 +274,129 @@
                 <li class="main-news-right-item">
                   <a href="#" class="main-news-right-link">
                     <p class="main-news-right-text">
-                      Putin maktab o‘quvchilarini yozgi ta’til vaqtida ishga
-                      jalb qilishga ruxsat berdi
+                      Dominikan poytaxtidagi tungi klub tomi konsert vaqti qulab
+                      tushdi. 15 kishi halok bo‘ldi
                     </p>
                     <div class="main-news-right-foot">
-                      <div class="gray-text"><p class>Jahon | 20:47</p></div>
+                      <div class="gray-text"><p class>Jahon | 20:29</p></div>
                     </div>
                   </a>
                 </li>
                 <li class="main-news-right-item">
                   <a href="#" class="main-news-right-link">
                     <p class="main-news-right-text">
-                      Putin maktab o‘quvchilarini yozgi ta’til vaqtida ishga
-                      jalb qilishga ruxsat berdi
+                      «Tashabbusli budjet»ning 2-mavsumida ba’zi mahallalarga
+                      tanaffus beriladi
                     </p>
                     <div class="main-news-right-foot">
-                      <div class="gray-text"><p class>Jahon | 20:47</p></div>
+                      <div class="gray-text">
+                        <p class>O`zbekiston | 20:37</p>
+                      </div>
                     </div>
                   </a>
                 </li>
                 <li class="main-news-right-item">
                   <a href="#" class="main-news-right-link">
                     <p class="main-news-right-text">
-                      Putin maktab o‘quvchilarini yozgi ta’til vaqtida ishga
-                      jalb qilishga ruxsat berdi
+                      “Yakkalangan davlat bo‘lmasligimiz kerak” – YeXHT
+                      Parlament assambleyasi prezidenti
                     </p>
                     <div class="main-news-right-foot">
-                      <div class="gray-text"><p class>Jahon | 20:47</p></div>
+                      <div class="gray-text">
+                        <p class>O`zbekiston | 20:20</p>
+                      </div>
                     </div>
                   </a>
                 </li>
                 <li class="main-news-right-item">
                   <a href="#" class="main-news-right-link">
                     <p class="main-news-right-text">
-                      Putin maktab o‘quvchilarini yozgi ta’til vaqtida ishga
-                      jalb qilishga ruxsat berdi
+                      Toshkent yo‘lovchi vagonlarini qurish va ta’mirlash zavodi
+                      Rossiya kompaniyasiga ishonchli boshqaruvga berildi
                     </p>
                     <div class="main-news-right-foot">
-                      <div class="gray-text"><p class>Jahon | 20:47</p></div>
+                      <div class="gray-text">
+                        <p class>O`zbekiston | 20:13</p>
+                      </div>
                     </div>
                   </a>
                 </li>
                 <li class="main-news-right-item">
                   <a href="#" class="main-news-right-link">
                     <p class="main-news-right-text">
-                      Putin maktab o‘quvchilarini yozgi ta’til vaqtida ishga
-                      jalb qilishga ruxsat berdi
+                      Panama mamlakat portlarini hongkongliklar boshqaruviga
+                      topshirgan amaldorlarni sudga beradi
                     </p>
                     <div class="main-news-right-foot">
-                      <div class="gray-text"><p class>Jahon | 20:47</p></div>
+                      <div class="gray-text"><p class>Jahon | 19:56</p></div>
                     </div>
                   </a>
                 </li>
                 <li class="main-news-right-item">
                   <a href="#" class="main-news-right-link">
                     <p class="main-news-right-text">
-                      Putin maktab o‘quvchilarini yozgi ta’til vaqtida ishga
-                      jalb qilishga ruxsat berdi
+                      YeChLda chorakfinal. «Real» va «Arsenal» o‘yinida kim
+                      favorit?
                     </p>
                     <div class="main-news-right-foot">
-                      <div class="gray-text"><p class>Jahon | 20:47</p></div>
+                      <div class="gray-text"><p class>Sport | 19:37</p></div>
                     </div>
                   </a>
                 </li>
                 <li class="main-news-right-item">
                   <a href="#" class="main-news-right-link">
                     <p class="main-news-right-text">
-                      Putin maktab o‘quvchilarini yozgi ta’til vaqtida ishga
-                      jalb qilishga ruxsat berdi
+                      Janubiy Koreya chegarani kesib o‘tgan KXDR askarlariga
+                      qarata ogohlantiruvchi o‘t ochdi
                     </p>
                     <div class="main-news-right-foot">
-                      <div class="gray-text"><p class>Jahon | 20:47</p></div>
+                      <div class="gray-text"><p class>Jahon | 18:28</p></div>
                     </div>
                   </a>
                 </li>
                 <li class="main-news-right-item">
                   <a href="#" class="main-news-right-link">
                     <p class="main-news-right-text">
-                      Putin maktab o‘quvchilarini yozgi ta’til vaqtida ishga
-                      jalb qilishga ruxsat berdi
+                      Andijonda yuk mashinasi yo‘l bo‘yidagi uyni buzib,
+                      ichkariga kirib ketdi
                     </p>
                     <div class="main-news-right-foot">
-                      <div class="gray-text"><p class>Jahon | 20:47</p></div>
+                      <div class="gray-text">
+                        <p class="">Jamiyat | 18:24</p>
+                      </div>
                     </div>
                   </a>
                 </li>
                 <li class="main-news-right-item">
                   <a href="#" class="main-news-right-link">
                     <p class="main-news-right-text">
-                      Putin maktab o‘quvchilarini yozgi ta’til vaqtida ishga
-                      jalb qilishga ruxsat berdi
+                      Chexiya bosh vazirining X’dagi akkaunti buzib kirildi va u
+                      orqali feyk postlar e’lon qilindi
                     </p>
                     <div class="main-news-right-foot">
-                      <div class="gray-text"><p class>Jahon | 20:47</p></div>
+                      <div class="gray-text"><p class>Jahon | 18:21</p></div>
                     </div>
                   </a>
                 </li>
                 <li class="main-news-right-item">
                   <a href="#" class="main-news-right-link">
                     <p class="main-news-right-text">
-                      Putin maktab o‘quvchilarini yozgi ta’til vaqtida ishga
-                      jalb qilishga ruxsat berdi
+                      «Kalmar o‘yinlari» aktyori 1 yillik qamoq jazosiga hukm
+                      qilindi
                     </p>
                     <div class="main-news-right-foot">
-                      <div class="gray-text"><p class>Jahon | 20:47</p></div>
+                      <div class="gray-text"><p class>Jahon | 18:18</p></div>
                     </div>
                   </a>
                 </li>
                 <li class="main-news-right-item">
                   <a href="#" class="main-news-right-link">
                     <p class="main-news-right-text">
-                      Putin maktab o‘quvchilarini yozgi ta’til vaqtida ishga
-                      jalb qilishga ruxsat berdi
+                      Zelenskiy frontda xitoylik askarlar asirga olinganini
+                      ma’lum qildi
                     </p>
                     <div class="main-news-right-foot">
-                      <div class="gray-text"><p class>Jahon | 20:47</p></div>
+                      <div class="gray-text"><p class>Jahon | 18:15</p></div>
                     </div>
                   </a>
                 </li>
