divlardan "main-current" qismini qo'shyapman

--- a/index.html
+++ b/index.html
@@ -412,6 +412,97 @@
             </div>
           </div>
         </div>
+        <div class="main-current">
+          <div class="big-title-wrapper">
+            <a href="#" class="big-title">Dolzarb xabarlar</a>
+          </div>
+          <div class="main-current-content">
+            <div class="main-current-wrapper">
+              <div class="main-current-big">
+                <div class="main-current-big-img">
+                  <img src="img/mbabe.jpg" alt="fotbal" />
+                </div>
+                <div class="main-news-right-foot">
+                  <div class="gray-text">
+                    <p class="">Sport | 09:17 / 09.04.2025</p>
+                  </div>
+                </div>
+                <a href="#">
+                  <h3 class="main-current-big-title">
+                    «Arsenal» «Real»ni yirik hisobda mag‘lub etdi
+                  </h3>
+                  <p class="main-current-big-text">
+                    Faqat Kurtuaning seyvlari hisob yanada yirik bo‘lishiga yo‘l
+                    qo‘ymadi.
+                  </p>
+                </a>
+              </div>
+            </div>
+            <div class="main-current-small">
+              <a href="#" class="default-card">
+                <div class="default-card-img">
+                  <img src="img/tranmp.jpeg" alt="tranp" />
+                </div>
+                <div class="gray-text @@className">
+                  <p class="">08:55 / 09.04.2025</p>
+                </div>
+                <h3 class="default-card-title">
+                  AQShning Xitoyga bojlari 9 aprelda 104 foizgacha ko‘tariladi
+                </h3>
+              </a>
+              <div class="main-current-small-list">
+                <div class="main-current-small-item">
+                  <div class="main-news-right-foot">
+                    <div class="gray-text">
+                      <p class="">Jahon | 18:15 / 08.04.2025</p>
+                    </div>
+                  </div>
+                  <a href="#" class="main-current-small-item-link"
+                    >Zelenskiy frontda xitoylik askarlar asirga olinganini
+                    ma’lum qildi</a
+                  >
+                </div>
+                <div class="main-current-small-item">
+                  <div class="main-news-right-foot">
+                    <div class="gray-text">
+                      <p class="">Iqtisodiyot | 16:50 / 08.04.2025</p>
+                    </div>
+                  </div>
+                  <a href="#" class="main-current-small-item-link"
+                    >Trampning savdo urushi. Bu jahon iqtisodiyotini tanazzulga
+                    olib keladimi?</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="main-current-small">
+              <a href="#" class="default-card"
+                ><div class="default-card-img">
+                  <img src="img/eron.jpg" alt="" />
+                </div>
+                <div class="gray-text @@className">
+                  <p class="">15:55 / 08.04.2025</p>
+                </div>
+                <h3 class="default-card-title">
+                  AQSh va Eron munosabatlaridagi keskinlashuv. Tehronda qanday
+                  variantlar bor?
+                </h3></a
+              ><a href="#" class="default-card"
+                ><div class="default-card-img">
+                  <img src="img/televizor.jpg" alt="" />
+                </div>
+                <div class="gray-text @@className">
+                  <p class="">11:08 / 08.04.2025</p>
+                </div>
+                <h3 class="default-card-title">
+                  Jahon iqtisodiyoti Trampning tariflarini «hazm qilmoqda»:
+                  investorlar vahimasi, neft narxi qulashi hamda Xitoy bilan
+                  katta savdo urushi arafasi
+                </h3></a
+              >
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
